TEST_PROGRAMS/INVALID/07/break_invalid.go
package main

func main () {
switch tag{
	default: s3()
	break a
	}
}
